--- a/springcloud-shop-eureka-server/src/main/resources/application.properties
+++ b/springcloud-shop-eureka-server/src/main/resources/application.properties
@@ -1,6 +1,12 @@
+#使用spring.profiles.active来分区配置，比如dev、test等环境
 spring.profiles.active=dev
+#注册中心的名称
 spring.application.name=springcloud-shop-eureka-server
+#注册中心的Ip地址
 eureka.instance.hostname=localhost
+#eureka.client.registerWithEureka=false表示是否将自己注册到注册中心默认是true
 eureka.client.registerWithEureka=false
+#eureka.client.fetchRegistry=false表示是否从eureka server获取注册信息默认是true
 eureka.client.fetchRegistry=false
+
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
